# milvus

internal/core/bench/: CMakeLists.txt  bench_indexbuilder.cpp
internal/core/bench/bench_utils/: parameter_tuning_utils.h  sift.h  utils.h
internal/core/bench/parameter-tuning/: Plots.ipynb  Plots_Search.ipynb  TODO_TUN_GET_CSV.sh  bench_flat.cpp  bench_hnsw.cpp  bench_ivfflat.cpp  bench_ivfpq.cpp  bench_ivfsq8.cpp
internal/core/src/index/unittest/: test_hnsw.cpp
internal/core/src/indexbuilder/: IndexWrapper.cpp  IndexWrapper.h
